Upgrade tomcat 7 to tomcat 8.5.13